<resources>
    <string name="app_name">Compartiendo el mundo</string>
    <string name="mis_experiencias">Mis Lugares Preferidos</string>
    <string name="Chats">Chats</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="Perfil">Perfil</string>
    <string name="titulo_perfil">Modifica tus Datos</string>
    <string name="Filtros">Filtros</string>
    <string name="publicaciones">PUBLICACIONES</string>
    <string name="redsocial">Instagram</string>
    <string name="image_description">Describe tu imagen</string>
    <string name="titulo_ppal">Realizar un Post</string>
    <string name="titulo_post">Lugar que Visitaste</string>
    <string name="lugar">Lugar</string>
    <string name="registrate">REGISTRATE</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="correo">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="pass1">Confirmar Contraseña</string>
    <string name="descripcion">Describe tu experiencia...</string>
    <string name="presupuesto">Presupuesto estimado (USD)</string>
    <string name="duracion">Duración del viaje (ej. 3 días)</string>
    <string name="publicar">Publicar</string>
    <string name="actualizar">Actualizar Perfil</string>
    <string name="transtionname_picture">transitionnamepicture</string>
    <string-array name="categorias_array">
        <item>Naturaleza</item>
        <item>Montaña</item>
        <item>Aventura</item>
        <item>Cultura</item>
        <item>Playa</item>
    </string-array>

    <string name="back4app_app_id">7SWcSutoFMj71yoUqDqFlTNiL1A5PXTRPk9L0IWc</string>
    <string name="back4app_client_key"> X4hehcmPFz39GWP81uq4qKb9ixXtwfhmdjVSpvI7</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="error_loading_posts">Error al cargar los posts. Intente nuevamente.</string>
    <string name="no_posts_available">No hay posts disponibles.</string></resources>
